--- a/www/mapMaker.html
+++ b/www/mapMaker.html
@@ -4,12 +4,12 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <title>Simple markers</title>
-	<link rel="stylesheet" href="mapMaker.css" type="text/css">
-    <script src="mapMaker.js"></script>
+	<link rel="stylesheet" href="simplemarkers.css" type="text/css">
+    <script src="simplemarkers.js"></script>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	
+	<script type="text/javascript" src="data.json"></script>
   </head>
   <body>
 	<h1 id="atlanta"> Smart Atlanta </h1>
@@ -17,8 +17,6 @@
 	<nav class = "navbar navbar-default" role = "navigation">
    <div>
       <ul class = "nav navbar-nav">
-        
-         <li><a href = "#">Map</a></li>
 		 <li><a href = "#">Report a Problem</a></li>
       </ul>
    </div>
