--- a/www/mapMaker.html
+++ b/www/mapMaker.html
@@ -17,14 +17,27 @@
 	<nav class = "navbar navbar-default" role = "navigation">
    <div>
       <ul class = "nav navbar-nav">
-		 <li><a href = "#">Report a Problem</a></li>
+		 <li><a href = "/add.php">Report a Problem</a></li>
       </ul>
    </div>
    
 </nav>
+<div id= "all">
+<ul class="nav nav-pills nav-stacked" id="vertical">
+   <li class="small"><a href = "/parkmaintance">Park Maintance</a></li>
+   <li class="small"><a href = "/trees">Trees</a></li>
+   <li class="small"><a href = "/flooding">Flooding</a></li>
+   <li class="small"><a href = "/sewer">Sewer Issues</a></li>
+   <li class="small"><a href = "/light">Street Light Repair</a></li>
+   <li class="small"><a href = "/water">Water Services</a></li>
+   <li class="small"><a href = "/signs">Signs and Signals Issues</a></li>
+   <li class="small"><a href = "/streets">Streets and Sidewalks Issues</a></li>
+	 
+</ul>
+
     <div id="map"></div>
 
-    
+   </div>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKHvGvRRh1wIWJOteAZSlEFlfbEPue6Jc
 &callback=initMap">
