--- a/www/mapMaker.html
+++ b/www/mapMaker.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <title>Simple markers</title>
-	<link rel="stylesheet" href="simplemarkers.css" type="text/css">
-    <script src="simplemarkers.js"></script>
+	<link rel="stylesheet" href="mapmaker.css" type="text/css">
+    <script src="mapmaker.js"></script>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
